<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:key="is_bot_enabled"
            app:summaryOff="@string/bot_enable_summary_off"
            app:summaryOn="@string/bot_enable_summary_on"
            app:defaultValue="true"
            app:title="@string/enable_bot_title" />

        <EditTextPreference
            app:dependency="is_bot_enabled"
            app:key="default_reply_message"
            app:title="@string/default_message_title"
            app:defaultValue="@string/default_bot_message"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:dependency="is_bot_enabled"
            app:key="is_group_reply_enabled"
            app:defaultValue="false"
            app:summaryOff="@string/group_reply_enable_summary_off"
            app:summaryOn="@string/group_reply_enable_summary_on"
            app:title="@string/enable_group_reply_title" />

        <EditTextPreference
            app:dependency="is_bot_enabled"
            app:key="reply_prefix_message"
            app:title="@string/reply_prefix_title"
            app:defaultValue="@string/default_reply_prefix"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="is_bot_enabled"
            app:key="max_reply"
            app:title="@string/max_reply_title"
            app:defaultValue="100"
            inputType="number"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:dependency="is_bot_enabled"
            app:key="is_natural_delay_enabled"
            app:defaultValue="true"
            app:summaryOff="@string/natural_delay_summary_off"
            app:summaryOn="@string/natural_delay_summary_on"
            app:title="@string/natural_delay_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ai_reply_header">

        <SwitchPreferenceCompat
            app:dependency="is_bot_enabled"
            app:key="is_ai_reply_enabled"
            app:defaultValue="false"
            app:summaryOff="@string/ai_reply_enable_summary_off"
            app:summaryOn="@string/ai_reply_enable_summary_on"
            app:title="@string/enable_ai_reply_title" />

        <EditTextPreference
            app:dependency="is_ai_reply_enabled"
            app:key="api_key"
            app:title="@string/api_key_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:dependency="is_ai_reply_enabled"
            app:defaultValue="gpt-4o"
            app:entries="@array/llm_model_entries"
            app:entryValues="@array/llm_model_values"
            app:key="llm_model"
            app:title="@string/llm_model_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:dependency="is_ai_reply_enabled"
            app:defaultValue="English"
            app:entries="@array/languages"
            app:entryValues="@array/languages"
            app:key="ai_reply_language"
            app:title="@string/ai_reply_language_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="is_ai_reply_enabled"
            app:key="bot_name"
            app:title="@string/bot_name_title"
            app:defaultValue="Yuji"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="is_ai_reply_enabled"
            app:key="custom_ai_prompt"
            app:title="@string/custom_prompt_title"
            app:summary="@string/custom_prompt_summary"
            app:defaultValue="@string/default_custom_prompt"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="is_ai_reply_enabled"
            app:key="custom_api_url"
            app:title="@string/custom_api_url_title"
            app:summary="@string/custom_api_url_summary"
            app:defaultValue="@string/default_custom_api_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="is_ai_reply_enabled"
            app:key="custom_api_response_key"
            app:title="@string/custom_api_response_key_title"
            app:summary="@string/custom_api_response_key_summary"
            app:defaultValue="@string/default_response_key"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:dependency="is_ai_reply_enabled"
            app:key="custom_api_request_format"
            app:title="@string/custom_api_request_format_title"
            app:summary="@string/custom_api_request_format_summary"
            app:entries="@array/request_format_entries"
            app:entryValues="@array/request_format_values"
            app:defaultValue="form"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>